# backstriper

./: .gitignore  README.md  pyproject.toml
backstriper/: __init__.py  palettes.py
